2008-04-01 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Critical bug fixed. Couldn't deselect after selecting with box.
	
2008-03-31 Martin Schaaf <mascha@ma-scha.de>

	* debian/chnagelog
	Add all entries from the rc versions.
	* configure.ac
	Bump to 0.5.0dev version.

2008-03-31 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* data/labyrinth.glade
	* src/MainWindow.py
	Beautify drop dead ugly export dialog.
	* src/utils.py
	Simplification.

2008-03-29 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Inherit color from parent node.

2008-03-29 Martin Schaaf <mascha@ma-scha.de>

	* src/TextThought.py
	o set attribute to none or normal on unsetting (there is more work
	todo)

2008-03-28 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix Issue 80 doing correct undo move.
	* po/de.po
	* po/labyrinth.pot
	Update german translation.

2008-03-28 Martin Schaaf <mascha@ma-scha.de>

	* src/labyrinth.py
	o check for pygtk version before gtk is imported like it is said in
	the pygtk FAQ, fixes Issue 82

2008-03-28 Martin Schaaf <mascha@ma-scha.de>

	* src/Makefile.am
	o add missing file for distribution creation

2008-03-27 Martin Schaaf <mascha@ma-scha.de>

	* src/MapList.py
	o fix renaming of thought
	* src/Browser.py
	o raise a AttributeError instead of a deprecated String

2008-03-27 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix problem when selecting through an object thus creating a link.
	* ChangeLog
	Correct changelog date of Martin's last entry.

2008-03-27 Martin Schaaf <mascha@ma-scha.de>

	* src/TextThought.py
	* src/MMapArea.py
	* src/BaseThought.py
	* src/MainWindow.py
	* src/TextBufferMarkup.py
	o add font selection support for thoughts, fixes issue 79
	o change attributes instead of inserting, fixes hopefully issue 53

2008-03-26  Don Scorgie  <Don@Scorgie.org>

	* src/Browser.py: 
	Only remember browser window size